[tool.poetry]
name = "Fast-api"
version = "0.0.12"
description = "An id generator that generates various types"
authors = ["ArjanCodes"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
